--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,38 @@ main {
 #map {
     height: 100%;
 }
+
+header, #popup, #legend {
+    position: fixed;
+    z-index: 1;
+    background-color: rgba(203, 203, 203, 0.9);
+    border: 1px solid black;
+    padding: 10px;
+}
+
+header {
+    top: 10px;
+    left: 10px;
+}
+
+#popup {
+    display: none;
+    top: 10px;
+    right: 10px;
+}
+
+#legend {
+    bottom: 30px;
+    right: 10px;
+}
+
+.color {
+    display: inline-block;
+    height: 10px;
+    width: 10px;
+    border: 1px solid black;
+}
+
+h3 {
+    margin: 2px 0;
+}
